# abacus

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  TOOL_CHARACTERISTICS_MATRIX.md  config.example.toml  docker-compose.yml  install-pack.sh
pkg/: Cargo.toml  LICENSE  Makefile  README.md  config.example.toml  provider.example.toml  tui_message_rendering_analysis.md
pkg/.github/workflows/: release.yml
pkg/abacus-tui/: .gitignore  build.ts  package.json  test-bridge.ts  test-opentui.ts  tsconfig.json
pkg/abacus-tui/src/: index.ts
pkg/abacus-tui/src/bridge/: engine.ts  native.ts  types.ts
pkg/abacus-tui/src/commands/: registry.ts
pkg/abacus-tui/src/components/: App.ts  Dashboard.ts
pkg/abacus-tui/src/components/cards/: renderer.ts  types.ts
pkg/abacus-tui/src/components/modes/: MeetingArea.ts  PlanArea.ts  TeamArea.ts
pkg/abacus-tui/src/components/overlays/: CommandPalette.ts  InlineConfirm.ts  MemoryPalace.ts  Toast.ts  UndoTimeline.ts
pkg/abacus-tui/src/components/panel/: SectionRegistry.ts
pkg/abacus-tui/src/i18n/: index.ts
pkg/abacus-tui/src/layout/: responsive.ts
pkg/abacus-tui/src/state/: store.ts
pkg/abacus-tui/src/state/machines/: app.ts  input.ts  mode.ts  stream.ts
pkg/abacus-tui/src/theme/: index.ts  oklch.ts  palettes.ts  types.ts
pkg/abacus-tui/src/utils/: cost.ts  scenario.ts  scroll.ts
pkg/assets/: abacus.icns  logo.txt  logo_compact.txt
pkg/crates/abacus-bridge/: Cargo.toml
pkg/crates/abacus-bridge/src/: lib.rs
pkg/crates/abacus-cli/: Cargo.toml  build.rs
pkg/crates/abacus-cli/examples/: quant_panel.rs  tui_bench.rs  v42b_card_stream.rs
pkg/crates/abacus-cli/src/: engine_init.rs  lib.rs  main.rs  output.rs  pipe.rs
pkg/crates/abacus-cli/src/commands/: agent.rs  chat.rs  config.rs  doctor.rs  exec.rs  mcp.rs  meeting.rs  mod.rs  model.rs  session.rs  skill.rs  team.rs  tui.rs  turnkey.rs  undo.rs
pkg/crates/abacus-cli/src/tui/: clipboard.rs  cost.rs  effects.rs  expert_config.rs  extensions.rs  i18n.rs  markdown.rs  md_stream.rs  meeting_cache.rs  mod.rs  run.rs  setup.rs  slash_commands.rs  syntax.rs  util.rs
pkg/crates/abacus-cli/src/tui/api/: mod.rs
pkg/crates/abacus-core/: Cargo.toml  build.rs  tools.toml
pkg/crates/abacus-core/benches/: codegraph_bench.rs
pkg/crates/abacus-core/examples/: audit_demo.rs  count_tool_tokens.rs  dump_tool_descs.rs  kb_ingest_docs.rs  lint_audit.rs  list_tools.rs  simulation.rs
pkg/crates/abacus-core/proto/: mcp.proto
pkg/crates/abacus-core/src/: code_exec.rs  config.rs  knowledge_extractor.rs  knowledge_store.rs  lib.rs  local_provider.rs  mag_chain.rs  mcip.rs  mcp.rs  memory_palace.rs  paths.rs  process_registry.rs  script_hook.rs  secrets.rs  validation.rs  vllm_embedder.rs
pkg/crates/abacus-core/src/agent/: adaptation.rs  errors.rs  executor.rs  health.rs  learning.rs  mod.rs  registry.rs  skill_discovery.rs  skill_executor.rs
pkg/crates/abacus-core/src/auto/: cron.rs  health.rs  mod.rs  pipeline.rs  runner.rs  store.rs  trigger.rs  watcher.rs
pkg/crates/abacus-core/src/cache/: backend.rs  l1.rs  mod.rs  warm.rs
pkg/crates/abacus-core/src/capability/: mod.rs
pkg/crates/abacus-core/src/code_graph/: analyze.rs  indexer.rs  mod.rs  query.rs  schema.rs  watcher.rs
pkg/crates/abacus-core/src/core/: action_classifier.rs  cold_buffer.rs  compress_math.rs  compute.rs  context.rs  cot_hook.rs  env.rs  event_sink.rs  fallible.rs  health.rs  humanizer.rs  inertia.rs  injector.rs  interaction.rs  knowledge_hook.rs  llm_budget.rs  mod.rs  opro_scheduler.rs  policy.rs  preflight.rs  pressure.rs  progressive.rs  progressive_gate.rs  progressive_inject.rs  prompt_assembly.rs  provider_adapter.rs  reasoning_integration.rs  safety.rs  session_store.rs  silent_router.rs  standby_cache.rs  subagent.rs  task_analyzer.rs  token_budget.rs  trajectory_collector.rs  triage.rs  workflow_checkers.rs  workflow_engine.rs  workflow_gate.rs
pkg/crates/abacus-core/src/deduction/: analysis.rs  mod.rs  series.rs
pkg/crates/abacus-core/src/feedback/: mod.rs  trajectory.rs
pkg/crates/abacus-core/src/llm/: fallback_provider.rs  mod.rs  model_cache.rs  model_catalog.rs  noop_provider.rs  prompt_cache.rs  provider.rs  provider_registry.rs  retry_provider.rs  stream.rs  text_tool_parser.rs  thinking_resolver.rs  tool_catalog.rs  tool_view.rs  wire_trace.rs
pkg/crates/abacus-core/src/lsp/: client.rs  mod.rs
pkg/crates/abacus-core/src/optimization/: mod.rs  opro.rs
pkg/crates/abacus-core/src/reasoning/: consistency.rs  mod.rs  tot.rs
pkg/crates/abacus-core/src/sandbox/: mod.rs  task_log.rs
pkg/crates/abacus-core/src/skill/: mod.rs
pkg/crates/abacus-core/src/tool/: cluster.rs  effectiveness.rs  ingest.rs  manifest.rs  mod.rs  schema_lint.rs  subsystem_policy.rs
pkg/crates/abacus-core/src/undo/: engine.rs  entry.rs  logger.rs  mod.rs  paths.rs  storage.rs
pkg/crates/abacus-core/tests/: cross_session_e2e.rs  integration_lm.rs  provider_mock_runtime.rs
pkg/crates/abacus-orchestrator/: Cargo.toml
pkg/crates/abacus-orchestrator/src/: THREE-MODES.md  lib.rs
pkg/crates/abacus-orchestrator/src/meeting/: assembler.rs  bridge.rs  builder.rs  config.rs  context.rs  core.rs  defaults.rs  event.rs  event_layer.rs  harness.rs  manager.rs  minutes.rs  mod.rs  router.rs  session.rs  store.rs
pkg/crates/abacus-orchestrator/src/plan/: mod.rs
pkg/crates/abacus-orchestrator/src/specialist/: mod.rs
pkg/crates/abacus-server/: Cargo.toml
pkg/crates/abacus-server/src/: lib.rs  logging.rs  main.rs  routes.rs  server.rs
pkg/crates/abacus-types/: Cargo.toml
pkg/crates/abacus-types/src/: abacus_mode.rs  agent.rs  collections.rs  engine.rs  error.rs  lib.rs  model.rs  model_preference.rs  model_registry.rs  progressive.rs  sandbox.rs
pkg/crates/abacus-ui-kit/: Cargo.toml
pkg/crates/abacus-ui-kit/src/: card.rs  card_render.rs  card_stream.rs  hooks.rs  lib.rs  scrollable.rs  scrollable_stack.rs  section.rs  theme.rs  util.rs
pkg/docs/: full-stack-review-2026-06-07-zh.md  full-stack-review-2026-06-07.md  phase-14-cleanup.md
pkg/scripts/: fresh-test.sh  install.sh
(+115 files in other folders)
