[package]
name = "abacus-core"
version = "2.5.1"
edition = "2021"
description = "Abacus Agent Kernel — L1+L2 unified core layer"

[dependencies]
abacus-types = { path = "../abacus-types" }

async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
glob = "0.3"
walkdir = "2"
rhai = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
rustls = { workspace = true }
toml = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
getrandom = "0.3"
libc = "0.2"
futures-util = "0.3"
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
wasmtime = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled", "chrono", "bundled-full"] }
# CodeGraph 内置工具：代码知识图谱（符号索引 + FTS5 搜索 + 调用图）
# 引用关系：被 tool/builtin/cg.rs 使用；bundled-full 启用 FTS5 虚拟表支持
sha1 = "0.10"
zeroize = { workspace = true }
lru = { workspace = true }
dirs = "6.0.0"

# ─── CodeGraph：tree-sitter 多语言解析 + 文件监听 + 并行索引 ───
# 引用关系：被 code_graph/lang/*.rs 使用
# 生命周期：CodeGraphManager 初始化时创建 Parser 实例池
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
# 文件监听（code_graph/watcher.rs — 长 daemon 模式增量索引）
notify = { version = "7", features = ["macos_kqueue"] }
# 并行索引（code_graph/indexer.rs — spawn_blocking 内 rayon 并行解析）
rayon = "1.10"

# ─── Phase Stability-1：稳定性补强 ───
parking_lot = { workspace = true }
governor = { workspace = true }
backon = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
tempfile = "3"
insta = { version = "1", features = ["yaml", "json"] }
# Path 1：HTTP mock server for testing provider runtime（complete/stream_complete/error 路径）。
# wiremock 是 tokio-native，支持 streaming / 状态码模拟 / Header 断言；与 #[tokio::test] 直接组合。
wiremock = "0.6"
# Property-based testing —— 给 canonical_hash / importance_score 等纯函数补强不变量验证
proptest = "1"
# CodeGraph 基准测试
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "codegraph_bench"
harness = false

[lints]
workspace = true
