[package]
name = "abacus-server"
version = "1.3.7"
edition = "2021"

[[bin]]
name = "abacus-server"
path = "src/main.rs"

[dependencies]
abacus-types = { path = "../abacus-types" }
abacus-core = { path = "../abacus-core" }
abacus-orchestrator = { path = "../abacus-orchestrator" }
axum = "0.7"
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.5", features = ["cors", "limit"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
chrono = { workspace = true }
async-trait = "0.1"
async-stream = "0.3"
futures-util = "0.3"
subtle = "2.6"
indexmap = { workspace = true }
uuid = { version = "1", features = ["v4"] }
sha2.workspace = true

[lints]
workspace = true
