[package]
name = "abacus-types"
version = "1.5.0"
edition = "2021"
description = "Abacus Agent Kernel — L0 type definitions"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = "5"
[lints]
workspace = true
