[package]
name = "abacus-ui-kit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Abacus UI kit — public TUI 公开契约：Theme + Section trait + Dashboard registry. 跨 crate 共享, 支持 Agent 应用扩展自定义看板/仪表盘"
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Ratatui — TUI 渲染目标
# 引用关系：Section::render(&mut Frame, ...) 直接接 ratatui Frame/Rect/Style
# 设计取舍：暴露 ratatui 类型到 trait 签名 = 用户扩展必须 use ratatui::*,
#          换取人体工程学（不强制 generic bound 或 type erasure）
ratatui = "0.28"

# Serde — Theme 序列化（用户自定义主题从 config.toml 反序列化）
# workspace 共享版本 + derive feature
serde = { workspace = true }

[lints]
workspace = true
